fix: alignment on main products grid in landing page

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -76,7 +76,7 @@
       grid-column: span 2;
 
       img {
-        height: 288px;
+        height: 280px;
       }
     }
 
